src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --off-black: #231F20;
  --white: #ffffff;
  --burnt-orange: #F26E25;
  --off-white: #ECEBE6;
  --accent: #F26E25;
  --accent-hover: #F26E25E6;
}

body {
  @apply font-body text-off-black bg-white antialiased;
}

